--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -9,4 +9,19 @@ user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
 meal.title=Моя еда
+meal.date=Дата/Время
+meal.description=Описание
+meal.calories=Калории
+meal.add=Добавить
+meal.filter=Отфильтровать
+meal.save=Сохранить
+meal.cancel=Отменить
+meal.fromDate=От даты
+meal.toDate=До даты
+meal.fromTime=От времени
+meal.toTime=До времени
+meal.update=Обновить
+meal.delete=Удалить
+meal.create=Добавление еды
+meal.edit=Редактирование еды
 common.select=Выбрать
